Fix font not sans-serif on Safari

--- a/sheet.css
+++ b/sheet.css
@@ -11,7 +11,7 @@ body, html {
 html {
     background-color: #881335;
     color: #f2f2f2;
-    font-family: sans;
+    font-family: sans-serif;
 }
 
 #root {
